--- a/style.css
+++ b/style.css
@@ -236,3 +236,19 @@
                  width: 50%;
                  margin: 0 auto;
              }
+             
+             .menu-item-title1 {
+                 text-align: center;
+                 color: black;
+             }
+             
+             .menu-bar2 {
+                 color: black;
+                 background-color: black;
+                 width: 300px;
+                 height: 5px;
+                 text-align: center;
+                 margin-left: auto;
+                 margin-right: auto;
+                 margin-top: -20px;
+             }
