--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+body {
+    font-family: 'Nunito', sans-serif;
+    margin: 0;
+    overflow-x: hidden;
+}
+
 .smoothie-ingredients-section {
     width: 100%;
     font-family: Work Sans, Nunito, sans-serif;
@@ -84,21 +101,6 @@
 
 .smoothie-ingredient-item#watermelon {
     background-image: url(https://s3-us-west-2.amazonaws.com/big-orange/watermelon.jpg);
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-a:hover {
-    color: inherit;
-    text-decoration: none;
-}
-
-body {
-    font-family: 'Nunito', sans-serif;
-    margin: 0;
 }
 
 .header {
@@ -230,7 +232,6 @@ li.logo1 {
     border-bottom-right-radius: 20px;
     display: inline-flex;
     align-items: center;
-    background-color: navajowhite;
     height: 120%;
 }
 
@@ -279,14 +280,59 @@ li.logo1:hover {
     margin-bottom: 40px;
 }
 
-.mango {
-    text-align: center;
-    margin-top: 50px;
-    background-image: url('images/mango.png');
-    width: 100%;
+.parallax-container {
+    height: 300px; 
+    background-attachment: fixed;
+    background-position: 0px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
+    margin-top: 20px; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start  
+}
+
+.parallax-intro {
+    padding: 20px;
+    color: #000;
+    margin: 20px;
+    background: #FFCA28;
+}
+
+.parallax-intro-header {
+    font-size: 14px;
+    letter-spacing: 0.6px;
+    text-transform: uppercase;
+    font-family: Work Sans, Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
+.parallax-intro-header em {
+    font-style: normal;
+    font-size: 18px;
+}
+
+.parallax-intro-copy {
+    margin: 10px 0 0 0;
+    font-size: 14px;
+}
+
+.parallax-container.mango {
+    background-image: url('images/mango.png');     
+}
+
+.parallax-container.bbt {
+    background-image: url('images/bbt.png');
+}
+
+.parallax-container.juice {
+    background-image: url('images/juice.png');
+}
+
+.parallax-container.smoothie {
+    background-image: url('images/smoothie.png');    
 }
 
 .menu-bar1 {
@@ -404,6 +450,10 @@ li.logo {
     height: 120%;
 }
 
+li.logo.menu {
+    margin-top: 20px;
+}
+
 li.logo:hover {
     transform: translateX(-50%) translateY(-45%);
 }
@@ -475,29 +525,6 @@ li.logo:hover {
     margin-left: 40px;
 }
 
-li.logo1 {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    padding-left: 20px;
-    padding-right: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    display: inline-flex;
-    align-items: center;
-    background-color: navajowhite;
-    height: 120%;
-}
-
-li.logo1:hover {
-    transform: translateX(-50%) translateY(-45%);
-}
-
-.logo1 img {
-    height: 40px;
-}
-
 .bbt {
     margin-top: 70px;
     display: flex;
@@ -510,9 +537,6 @@ li.logo1:hover {
     width: 50%;
     margin: 0 auto;
 }
-
-
-/* NEW!! LOVE YOU!! */
 
 .menu-item-content {
     text-align: center;
@@ -533,17 +557,6 @@ li.logo1:hover {
     margin-right: auto;
     margin-top: -20px;
     margin-bottom: 40px;
-}
-
-.mango {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: -30px;
-    background-image: url('images/mango.png');
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
 }
 
 .menu-bar1 {
@@ -649,6 +662,14 @@ li.logo1:hover {
     width: 100%;
 }
 
+.column.left .spacer {
+    flex: 0.25;
+}
+
+.column:not(.left) .spacer {
+    display: none;
+}
+
 .column .menu-title,
 .column .menu-content {
     padding: 40px 20px 20px 20px;
@@ -658,8 +679,26 @@ li.logo1:hover {
     flex: 1;
 }
 
+.menu-title.right {
+    text-align: right;
+}
+
+.menu-title.right .divider {
+    margin-left: auto;
+}
+
+.menu-title.right .color-circle {
+    left: initial;
+    right: -150px;
+}
+
 .menu-content {
     flex: 3;
+}
+
+.menu-content.left .items-list {
+    justify-content: center;
+    align-items: center;
 }
 
 .menu-title h4 {
@@ -698,26 +737,39 @@ li.logo1:hover {
     font-weight: 500;
 }
 
-.smoothie-list {
+.items-list {
     padding: 0;
     margin: 0;
     display: flex;
     flex-wrap: wrap;
 }
 
-.smoothie-list li {
+.items-list li {
     transition: all 0.3s ease;
     list-style: none;
-    cursor: pointer;
     padding: 20px 0;
     flex: 0 1 50%;
 }
 
-.smoothie-list li:hover {
+.items-list.smooth-teas li {
+    flex: 0 1 33%;
+}
+
+@media screen and (max-width: 800px) {
+    .items-list li {
+        flex: 0 1 100%;
+    }
+}
+
+#smoothie-menu.items-list li {
+    cursor: pointer;
+}
+
+.items-list li:hover {
     transform: translateX(10px);
 }
 
-.smoothie-list li h5 {
+.items-list li h5 {
     margin: 0;
     font-family: Work Sans;
     text-transform: uppercase;
@@ -734,5 +786,44 @@ li.logo1:hover {
     top: 75px;
     border-radius: 50%;
     z-index: -1;
-    background: darkorange;
+}
+
+.color-circle.pink {
+    background: pink;
+}
+
+.color-circle.green {
+    background: #1DE9B6;
+}
+
+.color-circle.purple {
+    background: #7986CB;
+}
+
+.color-circle.orange {
+    background: #FFCA28;
+}
+
+.menu-section {
+    margin: 80px 0;
+}
+
+.pricing.foot-note {
+    margin-top: 30px;
+    font-size: 14px;
+}
+
+.touch-indicator {
+    position: absolute;
+    top: -20px;
+    left: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.touch-indicator-image {
+    margin-right: 10px;
+    position: relative;
+    top: 0px;
 }
