--- a/style.css
+++ b/style.css
@@ -826,3 +826,10 @@ li.logo:hover {
     position: relative;
     top: 0px;
 }
+
+.poster{
+height: 100%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
